# swiftsend

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: iroh_send.rs  lib.rs  main.rs
src/components/: CopyText.tsx  DragAndDrop.tsx  Ping.tsx  Receive.tsx
src/contexts/: FileContext.tsx
src/utils/: cn.ts
