[package]
name = "swiftsend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sendme_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh = "0.32.1"
iroh-blobs = { version = "0.32.0", features = ["rpc"] }
anyhow = "1.0.95"
async-channel = "2.3.1"
clap = { version = "4.5.30", features = ["derive"] }
console = "0.15.10"
derive_more = { version = "2.0.1", features = ["display", "from_str"] }
futures-buffered = "0.2.9"
futures-lite = "2.6.0"
indicatif = "0.17.11"
iroh-io = "0.6.1"
num_cpus = "1.16.0"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"
data-encoding = "2.8.0"
n0-future = "0.1.2"
tauri-plugin-dialog = "2"
thiserror = "2.0.11"
futures = "0.3.31"
dirs = "6.0.0"
iroh-bytes = "0.15.0"

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8.5"
serde_json = "1.0.108"
tempfile = "3.8.1"
